ipc/ipdl/test/ipdl/ok/PUniquePtrUnion.ipdl
union UniquePtrUnion {
    int[];
    int;
    double;
};

sync protocol PUniquePtrUnion {
parent:
    async Msg(UniquePtrUnion u, UniquePtr<UniquePtrUnion> au) returns (UniquePtrUnion r);
};
