ipc/ipdl/test/ipdl/error/IntrAsyncManager.ipdl
include protocol IntrAsyncManagee;

async protocol IntrAsyncManager {
    manages IntrAsyncManagee;
parent:
    async IntrAsyncManagee();
};
